--- a/src/app/shared/modules/feed/components/feed-component/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed-component/feed.component.html
@@ -1,1 +1,30 @@
-<p>feed works!</p>
+<app-loading *ngIf="isLoading$ | async"></app-loading>
+<app-error-message *ngIf="error$ | async"></app-error-message>
+
+<div *ngIf="feed$ | async">
+  <div class="article-preview" *ngFor="let article of (feed$ | async).articles">
+    <div class="article-meta">
+      <a [routerLink]="['/profile', article.author.username]">
+        <img [src]="article.author.image" alt="author image" />
+      </a>
+      <div class="info">
+        <a [routerLink]="['/profile', article.author.username]">
+          {{ article.author.username }}
+        </a>
+        <span class="date">{{ article.createdAt }}</span>
+      </div>
+      <div class="pull-xs-right">ADD TO FAVORITES</div>
+    </div>
+    <a class="preview-link" [routerLink]="['/articles', article.slug]">
+      <h1>{{ article.title }}</h1>
+      <p>{{ article.description }}</p>
+      LIST OF TAGS IS HERE
+    </a>
+  </div>
+  <app-pagination
+    [totalArticlesCount]="(feed$ | async).articlesCount"
+    [limit]="limit"
+    [url]="baseUrl"
+    [currentPage]="currentPage"
+  ></app-pagination>
+</div>
