--- a/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
+++ b/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
@@ -19,7 +19,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/profile', (currentUser$ | async).username]" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/profiles', (currentUser$ | async).username]" routerLinkActive="active">
             <img class="user-image" [src]="(currentUser$ | async).image" />
             &nbsp;&nbsp; {{ (currentUser$ | async).username }}
           </a>
